name set to "Quick Folder Move Extended"

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
     "extensionName": {
-        "message": "Quick Folder Move"
+        "message": "Quick Folder Move Extended"
     },
     "extensionDescription": {
         "message": "Quickly move messages into other folders using the keyboard"
