tag and folder translated

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -136,5 +136,8 @@
     },
     "notification_first_run": {
         "message": "First operation done! You can activate notifications in the options."
+    },
+    "Folder": {
+        "message": "Folder"
     }
 }
