--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -125,11 +125,9 @@
     "operation_action_tag": {
         "message": "Tagged"
     },
-    "operation_message_single": {
-        "message": "message"
-    },
-    "operation_message_plural": {
-        "message": "messages"
+    "operation_message_pluralforms": {
+        "message": "message;messages",
+        "description": "List all plural forms for the word 'message', separated by ';', following your language's plural rules. The order must match the language's pluralization pattern: singular first, then all plural variations. Example: 'apple;apples' (English), 'pomme;pommes' (French), 'jabłko;jabłka;jabłek' (Polish), 'تفاح;تفاحة;تفاحتان;تفاحات;تفاحة;تفاح' (Arabic)."
     },
     "notificationActive": {
         "message": "Show a notification for each operation"
