--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -157,5 +157,8 @@
     },
     "notificationActive": {
         "message": "Show a notification for each operation"
+    },
+    "operationMenuItemsTitle": {
+        "message": "Operation Menu Items"
     }
 }
